Fix css not working
changed href to "/assets/main.css"

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Home</title>
   <link rel="icon" type="image/x-icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
-  <link rel="stylesheet" href="/assets/styles/main.css" />
+  <link rel="stylesheet" href="/assets/main.css" />
 
   <!-- Prefetching Resources -->
   <link rel="prefetch" href="/scram/scramjet.worker.js" />
