--- a/public/browser.html
+++ b/public/browser.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles/main.css" />
+    <link rel="stylesheet" href="/assets/main.css" />
     <script src="/baremux/index.js"></script>
     <script src="/epoxy/index.js"></script>
     <script src="/uv/uv.bundle.js"></script>
