--- a/public/settings.html
+++ b/public/settings.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Home</title>
   <link rel="icon" type="image/x-icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
-  <link rel="stylesheet" href="/assets/styles/main.css" />
+  <link rel="stylesheet" href="/assets/main.css" />
 
   <script src="/baremux/index.js"></script>
   <script src="/epoxy/index.js"></script>
