--- a/public/browser.html
+++ b/public/browser.html
@@ -10,6 +10,8 @@
     <script src="/epoxy/index.js"></script>
     <script src="/uv/uv.bundle.js"></script>
     <script src="/uv/uv.config.js"></script>
+    <link rel="prefetch" href="/scram/scramjet.worker.js" />
+    <link rel="prefetch" href="/scram/scramjet.shared.js" />
     <script src="/assets/js/main.js"></script>
     <script src="/sw.js"></script>
     <script src="https://unpkg.com/@rubynetwork/rammerhead-browser" defer></script>
