--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
 
   <!-- JavaScript files at the end for better performance -->
   <script src="/scram/scramjet.controller.js" defer></script>
-  <script src="/assets/js/main.js" defer></script>
-  <script src="/assets/js/time.js" defer></script>
+  <script src="/assets/main.js" defer></script>
+  <script src="/assets/time.js" defer></script>
 
 </body>
 
