--- a/public/browser.html
+++ b/public/browser.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/assets/main.css" />
     <script src="/baremux/index.js"></script>
     <script src="/epoxy/index.js"></script>
-    <script src="/uv/uv.bundle.js"></script>
-    <script src="/uv/uv.config.js"></script>
+    <script src="/ultraviolet/uv.bundle.js"></script>
+    <script src="/ultraviolet/uv.config.js"></script>
     <link rel="prefetch" href="/scram/scramjet.worker.js" />
     <link rel="prefetch" href="/scram/scramjet.shared.js" />
     <script src="/assets/main.js"></script>
