--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,16 @@
     <button class="home-button" onclick="goForward()"><i class="fa-solid fa-arrow-left"></i></button>
     <button class="home-button" onclick="goBack()"><i class="fa-solid fa-arrow-right"></i></button>
     <button class="home-button" onclick="refreshTab()"><i class="fa-solid fa-rotate-right"></i></button>
-    <button class="home-button" onclick="goHome()"><i class="fa-solid fa-home"></i></button>
+    <button class="home-button" onclick="location.href='index.html'"><i class="fa-solid fa-home"></i></button>
     <input type="text" id="url-input" placeholder="Enter a url or search term">
-    <button class="home-button" id="setttings" onclick="openSettings()"><i class="fa-solid fa-gear"></i></button>
+    <button class="home-button" id="setttings" onclick="location.href='settings.html'"><i class="fa-solid fa-gear"></i></button>
 </div>
   <div class="title">
-    <h1 id="title">Phantom</h1>
+    <h1 id="home-title">Phantom</h1>
   </div>
 
   <form id="form">
-    <input id="input" placeholder="Search the Web Freely..." />
+    <input id="input" placeholder="Search the Web..." />
   </form>
   <h1 id="time"></h1>
   </script>
