--- a/public/browser.html
+++ b/public/browser.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
+    <script src="https://kit.fontawesome.com/2a77da1b76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/main.css" />
     <script src="/baremux/index.js"></script>
     <script src="/epoxy/index.js"></script>
-    <script src="/ultraviolet/uv.bundle.js"></script>
-    <script src="/ultraviolet/uv.config.js"></script>
+    <script src="/uv/uv.bundle.js"></script>
+    <script src="/uv/uv.config.js"></script>
     <link rel="prefetch" href="/scram/scramjet.worker.js" />
     <link rel="prefetch" href="/scram/scramjet.shared.js" />
     <script src="/assets/main.js"></script>
@@ -21,6 +22,17 @@
 
     <div class="loading">
         <h1 id="loading">LOADING</h1>
+    </div>
+    <div class="toolbar">
+        <div class="tabs">
+
+        </div>
+        <button class="home-button" onclick="goForward()"><i class="fa-solid fa-arrow-left"></i></button>
+        <button class="home-button" onclick="goBack()"><i class="fa-solid fa-arrow-right"></i></button>
+        <button class="home-button" onclick="refreshTab()"><i class="fa-solid fa-rotate-right"></i></button>
+        <button class="home-button" onclick="location.href='index.html'"><i class="fa-solid fa-home"></i></button>
+        <input type="text" id="url-input" placeholder="Enter a url or search term">
+        <button class="home-button" id="setttings" onclick="location.href='settings.html'"><i class="fa-solid fa-gear"></i></button>
     </div>
     <iframe src="" frameborder="0" id="frame">
 
