--- a/public/settings.html
+++ b/public/settings.html
@@ -38,7 +38,7 @@
     <button class="home-button" onclick="refreshTab()">
       <i class="fa-solid fa-rotate-right"></i>
     </button>
-    <button class="home-button" onclick="location.href='index.html'">
+    <button class="home-button" onclick="location.href='/index.html'">
       <i class="fa-solid fa-home"></i>
     </button>
     <input 
@@ -46,7 +46,7 @@
       id="url-input" 
       placeholder="Enter a URL or search term"
     />
-    <button class="home-button" id="setttings" onclick="location.href='settings.html'">
+    <button class="home-button" id="setttings" onclick="location.href='/settings.html'">
       <i class="fa-solid fa-gear"></i>
     </button>
   </div>
