--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
   <link rel="icon" type="image/x-icon" href="/assets/images/phantom-rounded.png" />
   <link rel="stylesheet" href="/assets/main.css" />
 
-  <link rel="prefetch" href="/scram/scramjet.worker.js" />
-  <link rel="prefetch" href="/scram/scramjet.shared.js" />
+  <link rel="prefetch" href="/scramjet/scramjet.worker.js" />
+  <link rel="prefetch" href="/scramjet/scramjet.shared.js" />
 
   <script src="/baremux/index.js" defer></script>
   <script src="/epoxy/index.js" defer></script>
-  <script src="/uv/uv.bundle.js" defer></script>
-  <script src="/uv/uv.config.js" defer></script>
+  <script src="/ultraviolet/uv.bundle.js" defer></script>
+  <script src="/ultraviolet/uv.config.js" defer></script>
   <script src="/sw.js" defer></script>
   <script src="https://unpkg.com/@rubynetwork/rammerhead-browser" defer></script>
 </head>
@@ -43,7 +43,7 @@
   </script>
 
   <!-- JavaScript files at the end for better performance -->
-  <script src="/scram/scramjet.controller.js" defer></script>
+  <script src="/scramjet/scramjet.controller.js" defer></script>
   <script src="/assets/main.js" defer></script>
   <script src="/assets/time.js" defer></script>
 
