--- a/public/settings.html
+++ b/public/settings.html
@@ -18,8 +18,8 @@
   <!-- Scripts -->
   <script src="/baremux/index.js"></script>
   <script src="/epoxy/index.js"></script>
-  <script src="/uv/uv.bundle.js"></script>
-  <script src="/uv/uv.config.js"></script>
+  <script src="/ultraviolet/uv.bundle.js"></script>
+  <script src="/ultraviolet/uv.config.js"></script>
   <script src="/sw.js"></script>
   <script src="/assets/main.js"></script>
   <script src="https://unpkg.com/@rubynetwork/rammerhead-browser" defer></script>
