--- a/public/settings.html
+++ b/public/settings.html
@@ -72,7 +72,8 @@
       </button>
     </div>
     <div class="settings">
-      <h1>Future settings layout</h1>
+      <h1>General Settings</h1>
+      <p>Configure your general preferences here.</p>
     </div>
   </div>
   <script src="/assets/settings.js"></script>
