--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@
   </form>
   <h1 id="time"></h1>
   </script>
+  <!-- Bookmarks Container -->
+<div id="bookmarks-container"></div> flex
+▼<div class="context-menu" id="bookmark-context-menu" style="display: none"> == $0
+<div class="menu-item" onclick="editBookmark('${title}", "${url}")"> Edit </div>
+<div class="menu-item" onclick="deleteBookmark("${title}", '${url}')"> Delete </div>
+</div>
 
   <!-- JavaScript files at the end for better performance -->
   <script src="/scramjet/scramjet.controller.js" defer></script>
